--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,9 @@
 
     </head>
     <body>
-<!-- Load Cordova
+<!-- Load Cordova -->
 <script src="cordova.js"></script>
-  -->
+
       <!-- Mobile Application Splash Screen -->
       <div id="_drupalgap_splash" data-role="page">
          <div data-role="header" data-theme="b"><h2>AWRIMobile</h2></div>
