app version plugin

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     
-      <title>DrupalGap</title>
+      <title>AWRIMobile</title>
 
       <meta charset="utf-8" />
       <meta name="format-detection" content="telephone=no" />
@@ -28,10 +28,10 @@
     <body>
 <!-- Load Cordova -->
 <script src="cordova.js"></script>
- 
+
       <!-- Mobile Application Splash Screen -->
       <div id="_drupalgap_splash" data-role="page">
-         <div data-role="header" data-theme="b"><h2>DrupalGap</h2></div>
+         <div data-role="header" data-theme="b"><h2>AWRIMobile</h2></div>
          <div class="ui-content" data-role="content">
             <div id="_drupalgap_splash_content">
               <img src="images/logo.png" alt="AWRI" style="position: absolute; top: 50%; left: 50%; margin-left: -64px; margin-top: -64px;" />
@@ -40,36 +40,9 @@
       </div>
 <!-- Load OpenFB -->
 <script src="openfb.js"></script>
+
 <script type="text/javascript" charset="utf-8">
-openFB.init('126766317359254');
-
-/*
-document.addEventListener("deviceready", onDeviceReady, false);
-function onDeviceReady() {
-    console.log(navigator.device.capture);
-captureVideo();
-}
-
-// capture callback
-var captureSuccess = function(mediaFiles) {
-    var i, path, len;
-    for (i = 0, len = mediaFiles.length; i < len; i += 1) {
-        path = mediaFiles[i].fullPath;
-alert(path);
-        // do something interesting with the file
-    }
-};
-
-// capture error callback
-var captureError = function(error) {
-    navigator.notification.alert('Error code: ' + error.code, null, 'Capture Error');
-};
-
-function captureVideo(){
-// start audio capture
-navigator.device.capture.captureVideo(captureSuccess, captureError, {limit:1});
-}
-   */
+openFB.init({appId:'126766317359254'});
     </script>
 
       <!-- Load DrupalGap -->
